feat: improve export quality, fix logo assets, and adjust layout

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.2",
     "@angular/platform-browser": "^21.1.0",
+    "html-to-image": "^1.11.13",
     "rxjs": "^7.8.2",
     "tailwindcss": "latest"
   },
